--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Github API Test",
-  "name": "Github API Test",
+  "short_name": "GitHub API Test",
+  "name": "GitHub API Test",
   "icons": [
     {
       "src": "favicon.ico",
